--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.riferrei.elastic.apm</groupId>
-	<artifactId>otel-with-java</artifactId>
-	<version>0.1.0</version>
+	<artifactId>hello-app</artifactId>
+	<version>1.0</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
