--- a/run-with-collector.yaml
+++ b/run-with-collector.yaml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8888:8888"
     networks:
-      - elastic
+      - otel-with-java
     depends_on:
       - collector
     environment:
@@ -34,7 +34,7 @@ services:
       - "13133:13133"
       - "55680:55680"
     networks:
-    - elastic
+    - otel-with-java
     depends_on:
       apm-server:
         condition: service_healthy
@@ -53,7 +53,7 @@ services:
     ports:
     - 8200:8200
     networks:
-    - elastic
+    - otel-with-java
     command: >
        apm-server -e
          -E apm-server.rum.enabled=true
@@ -81,11 +81,11 @@ services:
         hard: -1
         soft: -1
     volumes:
-    - esdata:/usr/share/elasticsearch/data
+    - otel-with-java:/usr/share/elasticsearch/data
     ports:
     - 9200:9200
     networks:
-    - elastic
+    - otel-with-java
     healthcheck:
       interval: 10s
       retries: 20
@@ -103,16 +103,16 @@ services:
     ports:
     - 5601:5601
     networks:
-    - elastic
+    - otel-with-java
     healthcheck:
       interval: 10s
       retries: 20
       test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:5601/api/status
 
 volumes:
-  esdata:
+  otel-with-java:
     driver: local
 
 networks:
-  elastic:
+  otel-with-java:
     driver: bridge
