--- a/run-without-collector.yaml
+++ b/run-without-collector.yaml
@@ -26,7 +26,7 @@ services:
       test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:8888/hello
 
   apm-server:
-    image: docker.elastic.co/apm/apm-server:7.12.1
+    image: docker.elastic.co/apm/apm-server:7.13.1
     container_name: apm-server
     hostname: apm-server
     depends_on:
@@ -54,15 +54,16 @@ services:
       test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:8200/
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.12.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.13.1
     container_name: elasticsearch
     hostname: elasticsearch
     environment:
+    - node.name=es01
     - bootstrap.memory_lock=true
     - cluster.name=docker-cluster
     - cluster.routing.allocation.disk.threshold_enabled=false
     - discovery.type=single-node
-    - ES_JAVA_OPTS=-XX:UseAVX=2 -Xms1g -Xmx1g
+    - ES_JAVA_OPTS=-Xms1g -Xmx1g
     ulimits:
       memlock:
         hard: -1
@@ -79,7 +80,7 @@ services:
       test: curl -s http://localhost:9200/_cluster/health | grep -vq '"status":"red"'
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.12.1
+    image: docker.elastic.co/kibana/kibana:7.13.1
     container_name: kibana
     hostname: kibana
     depends_on:
