--- a/run-with-collector.yaml
+++ b/run-with-collector.yaml
@@ -26,7 +26,7 @@ services:
       test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:8888/hello
 
   collector:
-    image: otel/opentelemetry-collector-contrib
+    image: otel/opentelemetry-collector:latest
     container_name: collector
     hostname: collector
     command: ["--config=/etc/collector-config.yaml"]
@@ -42,7 +42,7 @@ services:
         condition: service_healthy
 
   apm-server:
-    image: docker.elastic.co/apm/apm-server:7.14.0
+    image: docker.elastic.co/apm/apm-server:7.15.0
     container_name: apm-server
     hostname: apm-server
     depends_on:
@@ -70,7 +70,7 @@ services:
       test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:8200/
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.0
     container_name: elasticsearch
     environment:
     - node.name=es01
@@ -92,7 +92,7 @@ services:
       test: curl -s http://localhost:9200/_cluster/health | grep -vq '"status":"red"'
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.14.0
+    image: docker.elastic.co/kibana/kibana:7.15.0
     container_name: kibana
     depends_on:
       elasticsearch:
