--- a/collector-config.yaml
+++ b/collector-config.yaml
@@ -3,11 +3,6 @@ receivers:
     protocols:
       grpc:
         endpoint: 0.0.0.0:55680
-  hostmetrics:
-    collection_interval: 1m
-    scrapers:
-      load:
-      memory:
 
 processors:
   batch:
@@ -26,15 +21,10 @@ service:
   extensions: [health_check]
   pipelines:
     metrics:
-      receivers:
-        - otlp
-        - hostmetrics
-      exporters:
-        - elastic
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [otlp]
     traces:
-      receivers:
-        - otlp
-      processors:
-        - batch
-      exporters:
-        - elastic
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [otlp]
