--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,7 +13,7 @@ github:
 
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: docker-compose -f run-with-collector.yaml --build pull
+  - init: docker-compose -f run-with-collector.yaml build && docker-compose -f run-with-collector.yaml pull
     command: docker-compose -f run-with-collector.yaml up -d
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
