--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
+spring.config.import=optional:dependencies.properties
 spring.application.name=hello-app
 server.port=8888
-spring.config.use-legacy-processing=true
-spring.config.import=classpath:dependencies.properties
